# dbver

./: .pre-commit-config.yaml  mkdocs.yml  setup.cfg
.github/workflows/: autoupdate.yaml  ci.yaml  pr.yaml  pre-commit-autoupdate.yaml  test.yaml
dbver/: __init__.py
dbver/tests/: test_dbver.py
docs/: compatibility.md  index.md  quickstart.md  why.md
pipenv/test/: Pipfile
src/dbver/: __init__.py
tests/: conftest.py  test_dbver.py
tests/application_id/: test_check.py  test_get.py  test_set.py
tests/migrations/: named_format_test.py  test_semver.py  test_user_version.py
tests/pools/: begin_pool_test.py  begin_test.py  null_pool_test.py  test_begin.py
tests/semver/: breaking_test.py
tests/user_version/: get_test.py  test_set.py
