[metadata]
name = dbver
description = Unopinionated sqlite schema versioning
url = https://github.com/AllSeeingEyeTolledEweSew/dbver
author = AllSeeingEyeTolledEweSew
author_email = asetes@pm.me
license = 0BSD
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Database
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
install_requires =
    typing-extensions>=3.6.5
python_requires = >=3.7
include_package_data = True

[options.package_data]
dbver = py.typed

[flake8]
max-line-length = 88
extend-ignore = E203

[mypy]
warn_return_any = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_unreachable = True
warn_unused_configs = True

[tox:tox]
isolated_build = True
envlist = py

[testenv]
deps =
    pytest
commands =
    pytest
