[metadata]
name = dbver
description = Unopinionated sqlite schema versioning
url = https://github.com/AllSeeingEyeTolledEweSew/dbver
author = AllSeeingEyeTolledEweSew
author_email = asetes@pm.me
license = 0BSD
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Database
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >=3.8
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
dbver = py.typed

[flake8]
max-line-length = 88
extend-ignore = E203

[mypy]
warn_return_any = True
warn_redundant_casts = True
warn_unreachable = True
warn_unused_configs = True
disallow_untyped_defs = True
strict_equality = True

[tox:tox]
isolated_build = True
envlist = clean,py-{sqlite3,apsw}

[testenv]
deps =
    pytest
    pytest-cov
    -rtests/test-requirements.txt
    apsw: apsw
commands =
    pytest --cov --cov-append --cov-report=xml --cov-report=html --cov-report=term-missing:skip-covered {posargs}

[testenv:clean]
deps = coverage
skip_install = true
commands = coverage erase
